--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,31 @@ p {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+body{
+  margin:0;
+}
+
+
+
+
+/**
+  maplibre-gl additional styling
+*/
+.geofence-ctrl-create-prompt {
+    box-shadow: 0px -2px 4px rgb(0 0 0 / 12%);
+    border-radius: 4px;
+    background: white;
+    padding: 12px;
+    position: absolute;
+    top: 0;
+    pointer-events: auto;
+}
+
+.geofence-ctrl{
+
+}
+
+.geofence-ctrl-list-container {
+    height: max-content;
+    border-radius: 0.2em;
+}
