--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,10 @@
-h1,
-p {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body{
   margin:0;
 }
-
 
 
 
@@ -22,11 +20,6 @@ body{
     top: 0;
     pointer-events: auto;
 }
-
-.geofence-ctrl{
-
-}
-
 .geofence-ctrl-list-container {
     height: max-content;
     border-radius: 0.2em;
